<resources>
    <string name="app_name">AppHotel</string>
    <string name="checkin_info">Check-in: %1$s</string>
    <string name="checkout_info">Check-out: %1$s (%2$d noches)</string>
    <string name="huesped_info">%1$s (%2$s)\nID: %3$s</string>
    <string name="precio_format">$%1$.2f</string>
    <string name="habitacion_format">Hab. %1$s - %2$s</string>
    <string name="piso_capacidad_format">Piso %1$d - Capacidad: %2$d</string>

    <string name="title_reservas">Reservas</string>
    <string name="title_huespedes">Huéspedes</string>
    <string name="title_habitaciones">Habitaciones</string>
    <string name="title_nueva_reserva">Nueva Reserva</string>
    <string name="title_nuevo_huesped">Nuevo Huésped</string>
    <string name="title_detalle_reserva">Detalle de Reserva</string>

    <string name="msg_delete_huesped_confirm">¿Está seguro de eliminar a %1$s?</string>
    <string name="msg_delete_reserva_confirm">¿Está seguro de eliminar la reserva %1$s?</string>
    <string name="msg_delete_habitacion_confirm">¿Está seguro de eliminar la habitación %1$s?</string>

    <string name="btn_save">Guardar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_add">Agregar</string>
    <string name="btn_confirm_reserva">Confirmar Reserva</string>
    <string name="btn_checkout">Realizar Check-out</string>

    <string name="label_cedula">Cédula</string>
    <string name="label_nombres">Nombres</string>
    <string name="label_apellidos">Apellidos</string>
    <string name="label_email">Email</string>
    <string name="label_telefono">Teléfono</string>
    <string name="label_direccion">Dirección</string>
    <string name="label_nacionalidad">Nacionalidad</string>
    <string name="label_codigo_reserva">Código de Reserva</string>
    <string name="label_huesped">Huésped</string>
    <string name="label_checkin">Check-in</string>
    <string name="label_checkout">Check-out</string>
    <string name="label_detalle_habitaciones">Detalle de Habitaciones</string>

    <string name="title_nueva_habitacion">Nueva Habitación</string>
    <string name="title_editar_habitacion">Editar Habitación</string>
    <string name="label_numero_habitacion">Número de habitación</string>
    <string name="label_tipo_habitacion">Tipo de habitación</string>
    <string name="label_piso">Piso</string>
    <string name="label_capacidad">Capacidad</string>
    <string name="label_precio_noche">Precio por noche ($)</string>
    <string name="label_descripcion">Descripción</string>
    <string name="label_estado">Estado</string>
</resources>
